# CopyTej

./: CHANGELOG.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  register_context_menu.ps1
.github/workflows/: build.yml
docs/: index.html  style.css
shell-ext/: Cargo.toml
shell-ext/src/: lib.rs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  errors.rs  lib.rs  main.rs
src-tauri/src/engine/: conflict.rs  hasher.rs  mod.rs  queue.rs
src-tauri/src/ipc/: mod.rs  pipe_server.rs
src-tauri/src/store/: db.rs
