[package]
name = "copytej-shell"
version = "0.1.0"
edition = "2024"

[lib]
name = "copytej_shell"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_System_Registry"
] }
