[package]
name = "copytej-app"
version = "0.2.0"
description = "CopyTej — Modern TeraCopy Replacement"
authors = ["CopyTej Authors"]
edition = "2024"

[lib]
name = "copytej_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["full"] }
blake3 = "1.5"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
anyhow = "1.0"
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry"
] }
rayon = "1.10"
filetime = "0.2"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
sha2 = "0.10"
