[package]
name = "copytej-app"
version = "0.4.0"
description = "CopyTej — Modern TeraCopy Replacement"
authors = ["CopyTej Authors"]
edition = "2024"

[lib]
name = "copytej_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.37", features = ["full"] }
blake3 = { version = "1.5", features = ["rayon"] }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
rusqlite = { version = "0.31", features = ["bundled", "uuid", "chrono"] }
uuid = { version = "1.8", features = ["v4", "v7", "serde"] }
windows = { version = "0.56", features = [
    "Win32_Foundation",
    "Win32_Storage",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_Pipes",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry"
] }
rayon = "1.10"
walkdir = "2.5"
chrono = { version = "0.4", features = ["serde"] }
md5 = "0.7"
sha2 = "0.10"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-notification = "2.3.3"
window-vibrancy = "0.7"
thiserror = "1.0"
crc32fast = "1.4"
ahash = "0.8"
memmap2 = "0.9"
bytesize = "1.3"
jwalk = "0.8"
dunce = "1.0"
sysinfo = "0.30"
tempfile = "3.10"
tracing = "0.1"
tracing-subscriber = "0.3"



